Allowed update of the default match profile for marc-authority deletion